Another minor fix to content spacing

--- a/src/style/style.css
+++ b/src/style/style.css
@@ -36,20 +36,11 @@ p {
 	font-family: georgia;
 }
 
-.outsideText {
-	max-width: 1000px;
-	margin-left: auto;
-	margin-right: auto;
-	margin: auto;
-	left: auto;
-	right: auto;
-}
-
 .content {
 	font-family: georgia;
 	position: relative;
 	left: 450px;
-	max-width: 1000px;
+	max-width: 1140px;
 	right: 8%;
 	font-size: 25px;
 	line-height: 1.3;
